--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
 
 <header class='hero'>
   <div class='wrapper'>
-    <img src='/assets/logo.png'>
     <h1>JSConf China</h1>
     <p>21th-22th Jun, 2015, Shenzhen, China</p>
   </div>
@@ -20,7 +19,7 @@
       <span class='seconds'><strong>43</strong> {{ time.seconds }}</span>
     </div>
 
-    <h2>Subscribe to our newsletter</h2>
+    <h2>{{ subscribe.title }}</h2>
 
     {% include 'partials/_subscribe.html' %}
 
