add parallax and some details

--- a/templates/default.html
+++ b/templates/default.html
@@ -14,7 +14,6 @@
   {% include 'partials/_favicons.html' %}
 
   <!-- CSS -->
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
 <body class='page-{{ path | default("front") }}'>
@@ -33,7 +32,8 @@
   </footer>
 
   <!-- JS -->
-  <script src='/assets/scripts.js' type='text/javascript'></script>
+  <script src='/assets/js/scripts.js' type='text/javascript'></script>
+  <script src='/assets/js/plug/jquery.parallax.min.js' type='text/javascript'></script>
   <!--[if lt IE 9]><script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
   {% if site.gauges %}{% include 'partials/_gauges.html' %}{% endif %}
 	{% if site.ga %}{% include 'partials/_ga.html' %}{% endif %}
