--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -1,5 +1,5 @@
 a {
-  @include font-size($huge);
+  @include font-size($large + 6);
   padding: $gutter/2 1.5*$gutter/2;
   @include tooltip;
   &:first-child {
