--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,12 @@
 /* Eggshell */
 
 $font: 'Roboto', Arial, sans;
-$blue: #4E91FF;
+$blue: #5399fc;
 $light: #DBEAFF;
 
 @import 'eggshell';
-
+@import 'layout';
+@import 'fonts';
 /* Variables */
 
 $width: 960px;
@@ -21,80 +22,114 @@ $code: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans 
 
 body {
   text-align: center;
+  letter-spacing: 0.3px;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
-
 .wrapper {
   margin: 0 auto;
   max-width: $width;
   text-align: left;
   width: 90%;
 }
-
 code {
   font-family: $code;
 }
-
-.button,
-a.button {
+.button, a.button {
   border-radius: 2*$gutter;
   border: 2px solid $blue;
   @include transition-property(background, border);
   @include transition-duration(0.2s);
-  &:hover,
-  &:focus {
+  &:hover, &:focus {
     border-color: tint($blue, 10%);
   }
-  &:active,
-  &.active {
+  &:active, &.active {
     border-color: shade($blue, 10%);
   }
 }
-
-input:not([type=submit]),
-textarea {
+input:not([type=submit]), textarea {
   border-color: $light;
   border-radius: 2*$gutter;
-  &:hover,
-  &:focus {
+  &:hover, &:focus {
     background: #FFF;
     border-color: $light;
   }
 }
-
 @mixin halves($reverse: false) {
   @include box-sizing(border-box);
   width: 50%;
-  @if $reverse == true {
-    &:nth-child(odd) {
+  @if $reverse= true {
+    &:nth-child(even) {
       float: right;
       padding-left: $gutter;
     }
-    &:nth-child(even) {
+    &:nth-child(odd) {
       float: left;
       padding-right: $gutter;
     }
   }
   @else {
-    &:nth-child(odd) {
+    &:nth-child(even) {
       float: left;
       padding-right: $gutter;
     }
-    &:nth-child(even) {
+    &:nth-child(odd) {
       float: right;
       padding-left: $gutter;
     }
   }
 }
+/* keyframes */
 
+@-webkit-keyframes cloud {
+  0% {
+    -webkit-transform: translate(15%, 0);
+    -moz-transform: translate(15%, 0);
+    transform: translate(15%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-15%, 0);
+    -moz-transform: translate(-15%, 0);
+    transform: translate(-15%, 0);
+  }
+}
+@-moz-keyframes cloud {
+  0% {
+    -webkit-transform: translate(15%, 0);
+    -moz-transform: translate(15%, 0);
+    transform: translate(15%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-15%, 0);
+    -moz-transform: translate(-15%, 0);
+    transform: translate(-15%, 0);
+  }
+}
+@-ms-keyframes cloud {
+  0% {
+    -webkit-transform: translate(15%, 0);
+    -moz-transform: translate(15%, 0);
+    transform: translate(15%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-15%, 0);
+    -moz-transform: translate(-15%, 0);
+    transform: translate(-15%, 0);
+  }
+}
+@keyframes cloud {
+  0% {
+    -webkit-transform: translate(15%, 0);
+    -moz-transform: translate(15%, 0);
+    transform: translate(15%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-15%, 0);
+    -moz-transform: translate(-15%, 0);
+    transform: translate(-15%, 0);
+  }
+}
 /* Header */
 
 #header {
@@ -121,31 +156,150 @@ textarea {
     }
   }
 }
-
 /* Content */
 
 #content {
   .hero {
     background: $blue;
     color: #FFF;
+    position: relative;
     .wrapper {
+      margin: 0 auto;
+      position: relative;
       text-align: center;
+      z-index: 2;
+      h1 {
+        color: inherit;
+        @include font-size($gigantic);
+        &:before {
+          @include icon;
+          content: '0';
+          display: block;
+          @include font-size(64);
+          margin-bottom: $gutter;
+        }
+        & + p {
+          color: tint($blue, 80%);
+          @include font-size($larger);
+          margin: 0;
+        }
+      }
     }
-    h1 {
-      color: inherit;
-      @include font-size($gigantic);
-      &:before {
-        @include icon;
-        content: '0';
-        display: block;
-        @include font-size(64);
-        margin-bottom: $gutter;
-      }
-      & + p {
-        color: tint($blue, 80%);
-        @include font-size($larger);
+    .parallax {
+      bottom: 0px;
+      height: 100%;
+      position: absolute;
+      width: 100%;
+      .scene {
+        height: 100%;
+        padding: 0;
         margin: 0;
+        overflow: hidden;
+        .layer {
+          bottom: 0px;
+          width: 100%;
+          height: 100%;
+          .city {
+            bottom: 0px;
+            background-position: center bottom;
+            background-repeat: no-repeat;
+            height: 100%;
+            left: 50%;
+            position: absolute;
+            margin-left: -$width;
+            width: $width*2;
+            @include medium {
+              margin-left: -$width*0.65;
+              width: $width*1.3;
+            }
+            @include small {
+              margin-left: -$width/2;
+              width: $width;
+            }
+          }
+          .cloud {
+            background-repeat: no-repeat;
+            background-size: contain;
+            height: 100px;
+            position: absolute;
+            -webkit-transform-origin: 50% 90%;
+            -moz-transform-origin: 50% 90%;
+            transform-origin: 50% 90%;
+            -webkit-animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.33, 0.515, 0.955);
+            -moz-animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.415, 0.955);
+            animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955);
+            @include medium {
+              width: 100px!important;
+            }
+            @include small {
+              width: 70px!important;
+            }
+          }
+          &:nth-child(1) {
+            z-index: 1;
+            div {
+              background-image: url('/images/layer1.png');
+              background-size: contain;
+            }
+          }
+          &:nth-child(2) {
+            div {
+              background-image: url('/images/layer2.png');
+              background-size: contain;
+            }
+          }
+          &:nth-child(3) {
+            div {
+              background-image: url('/images/layer3.png');
+              background-size: contain;
+            }
+          }
+          &:nth-child(4) {
+            div {
+              background-image: url('/images/cloud1.png');
+              width: 148px;
+              left: 10%;
+              opacity: 0.6;
+              top: 30%;
+              -webkit-animation-duration: 2s;
+              animation-duration: 2s;
+              -moz-animation-duration: 2s;
+            }
+          }
+          &:nth-child(5) {
+            div {
+              background-image: url('/images/cloud2.png');
+              width: 147px;
+              left: 20%;
+              opacity: 0.4;
+              top: 20%;
+              -webkit-animation-duration: 3s;
+              animation-duration: 3s;
+              -moz-animation-duration: 3s;
+            }
+          }
+          &:nth-child(6) {
+            div {
+              background-image: url('/images/cloud3.png');
+              width: 162px;
+              left: 80%;
+              opacity: 0.5;
+              top: 40%;
+              -webkit-animation-duration: 4s;
+              animation-duration: 4s;
+              -moz-animation-duration: 4s;
+            }
+          }
+        }
       }
+    }
+    .arrow{
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: rgba(0, 0, 0, 0.03) 0 1px 0 0;
+      height: $gutter*2;
+      width: $gutter*2;
+      content:'>';
     }
   }
   .section {
@@ -155,22 +309,23 @@ textarea {
     background: $light;
     .wrapper {
       text-align: center;
+      color: $blue;
+      h2{
+       color: $blue; 
+      }
     }
     form * {
       display: inline-block;
       vertical-align: middle;
     }
-    .button,
-    input:not([type=submit]),
-    textarea {
+    .button, input:not([type=submit]), textarea {
       border: 0;
       line-height: 180%;
       font-family: $font;
       font-size: inherit;
       padding: $gutter/2 1.5*$gutter;
     }
-    input:not([type=submit]),
-    textarea {
+    input:not([type=submit]), textarea {
       background: #FFF;
       border-radius: 2*$gutter 0 0 2*$gutter;
     }
@@ -180,18 +335,23 @@ textarea {
     }
     .countdown {
       @include clearfix;
-      margin-bottom: 4*$gutter;
+      text-transform: uppercase;
       span {
         display: inline-block;
+        @include font-size($smaller); 
         text-align: center;
         margin: 0 $gutter;
       }
       strong {
-        color: $black;
+        color: $blue;
         display: block;
+        font-weight: normal;
         @include font-size($huge);
         margin: 0 auto $gutter/4;
       }
+    }
+    .line{
+      margin: 40px 0;
     }
     .social {
       @include clearfix;
@@ -201,8 +361,7 @@ textarea {
   }
   .info {
     @include clearfix;
-    .about,
-    .map {
+    .about, .map {
       @include halves;
     }
   }
@@ -218,3 +377,5 @@ textarea {
     text-align: center;
   }
 }
+
+
