--- a/templates/default.html
+++ b/templates/default.html
@@ -32,8 +32,7 @@
   </footer>
 
   <!-- JS -->
-  <script src='/assets/js/scripts.js' type='text/javascript'></script>
-  <script src='/assets/js/plug/jquery.parallax.min.js' type='text/javascript'></script>
+  <script src='/assets/scripts.js' type='text/javascript'></script>
   <!--[if lt IE 9]><script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
   {% if site.gauges %}{% include 'partials/_gauges.html' %}{% endif %}
 	{% if site.ga %}{% include 'partials/_ga.html' %}{% endif %}
