--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -1,7 +1,8 @@
 a {
   @include font-size($large + 6);
-  padding: $gutter/2 1.5*$gutter/2;
+  padding: 0 1.5*$gutter/2;
   @include tooltip;
+  @include transition(all, 0.2s, ease);
   &:first-child {
     border-radius: $radius 0 0 $radius;
   }
