--- a/templates/default.html
+++ b/templates/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang='{{ locale }}'>
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -8,7 +8,8 @@
 
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='{{ site.keywords | join(", ") }}{% if tags %}, {{ tags | join(", ") }}{% endif %}'/>
-  {% if site.description %}<meta name='description' content='{{ site.description }}'/>{% endif %}
+  {% if description %}<meta name='description' content='{{ description }}'/>
+  {% elseif site.description %}<meta name='description' content='{{ site.description }}'/>{% endif %}
   
   <!-- Favicons -->
   {% include 'partials/_favicons.html' %}
@@ -19,7 +20,8 @@
 <body class='page-{{ path | default("front") }}'>
   <header id='header'>
     <nav class='menu'>
-      <a href='#'>CN</a>
+      {% if locale == 'zh' %}<a href='/en'>EN</a>{% endif %}
+      {% if locale == 'en' %}<a href='/'>中文</a>{% endif %}
     </nav>
   </header>
 
