--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 
 <header class='hero'>
   <div class='wrapper'>
-    <h1>JSConf China</h1>
-    <p>21th-22th Jun, 2015, Shenzhen, China</p>
+    <h1>{{ event.title }}</h1>
+    <p>{{ event.details }}</p>
   </div>
   <div id='parallax' class='parallax'>
     <ul id='scene' class='scene'>
@@ -23,13 +23,13 @@
 
 <section class='section action'>
   <div class='wrapper'>
-    <div class='countdown'>
+    <!-- <div class='countdown'>
       <span class='days'><strong>50</strong> {{ time.days }}</span>
       <span class='hours'><strong>5</strong> {{ time.hours }}</span>
       <span class='minutes'><strong>23</strong> {{ time.minutes }}</span>
       <span class='seconds'><strong>43</strong> {{ time.seconds }}</span>
-    </div>
-    <img src='/images/line.png' class='line'>
+    </div> -->
+    <!-- <img src='/images/line.png' class='line'> -->
     <h2>{{ subscribe.title }}</h2>
     {% include 'partials/_subscribe.html' %}
     <nav class='social'>
@@ -44,7 +44,7 @@
   <div class='wrapper'>
     <div class='about'>
       <h2>{{ about.title }}</h2>
-      <p>{{ about.content }}</p>
+      <p>{{ about.content | raw }}</p>
     </div>
     <div class='map'>
       <img src='/images/map.png'>
