--- a/templates/partials/_subscribe.html
+++ b/templates/partials/_subscribe.html
@@ -1,8 +1,17 @@
-<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=db875395f9' method='post' target='_blank'>
+{% if locale == 'en' %}
+{% set placeholder = 'Your email address' %}
+{% set submit = 'Subscribe' %}
+{% endif %}
+{% if locale == 'zh' %}
+{% set placeholder = '您的电子邮件地址' %}
+{% set submit = '订阅' %}
+{% endif %}
+
+<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
   <div class='field'>
-    <input type='email' value='' name='EMAIL' class='required email' placeholder='Your email address'/>
+    <input type='email' value='' name='EMAIL' class='required email' placeholder='{{ placeholder }}'/>
   </div>
   <div class='field'>
-    <input type='submit' value='Subscribe' name='subscribe' class='button'/>
+    <input type='submit' value='{{ submit }}' name='subscribe' class='button'/>
   </div>
 </form>
