--- a/templates/default.html
+++ b/templates/default.html
@@ -17,10 +17,28 @@
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
 <body class='page-{{ path | default("front") }}'>
+
   <header id='header'>
     <nav class='menu'>
       <a href='#'>CN</a>
-    </nav>
+    </nav> 
+    <header class='hero'>
+      <div class='wrapper'>
+        <h1>JSConf China</h1>
+        <p>21th-22th Jun, 2015, Shenzhen, China</p>
+      </div>
+      <div id='parallax' class='parallax'>
+        <ul id='scene' class='scene'>
+          <li class='layer' data-depth='1.00'><div class='city'></div></li>
+          <li class='layer' data-depth='0.80'><div class='city'></div></li>
+          <li class='layer' data-depth='0.60'><div class='city'></div></li>
+          <li class='layer' data-depth='0.40'><div class='cloud'></div></li>
+          <li class='layer' data-depth='0.20'><div class='cloud'></div></li>
+          <li class='layer' data-depth='0.30'><div class='cloud'></div></li>
+        </ul>
+      </div>
+      <div class='arrow'></div>
+    </header>
   </header>
 
   <section id='content'>
