--- a/templates/partials/_subscribe.html
+++ b/templates/partials/_subscribe.html
@@ -3,7 +3,7 @@
 {% set submit = 'Subscribe' %}
 {% endif %}
 {% if locale == 'zh' %}
-{% set placeholder = '您的电子邮件地址' %}
+{% set placeholder = '你的邮箱地址' %}
 {% set submit = '订阅' %}
 {% endif %}
 
