--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,6 +97,7 @@ input:not([type=submit]), textarea {
   position: fixed;
   top: 0px;
   width: 100%;
+  z-index: 1;
   @include medium {
     max-height: 800px;
   }
