rectify the footer link

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,3 +1,3 @@
-<a href='http://jsconfcn.com'>JSConf.cn</a>
+<a href='http://jsconf.cn'>JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
 <a href='http://wiredcraft.com'>Built by Wiredcraft</a>
